ClutterBoxLayout: Blessing with proper h4w geometry management

The box layout was broken for height-for-width requests in the opposing orientation of the box.

https://bugzilla.gnome.org/show_bug.cgi?id=679483